Update jvmdefaults.bat
Added "--illegal-access=permit" for Java 11+ in jvmdefaults.bat